<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_browse_equipment"
            android:title="@string/browse_equipment" />
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_messages"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_list_your_equipment"
            android:title="@string/list_your_equipment" />
        <item
            android:id="@+id/nav_rent_history"
            android:title="@string/rent_history" />

        <item
            android:id="@+id/nav_favourites"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_account"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_earn_free_rents"
            android:title="@string/earn_free_rents" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
