<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/login_form"
                android:layout_alignParentTop="true"
                android:gravity="center"

                android:orientation="horizontal">

                <com.roxwin.tracktor.widgets.textviews.RoxwinBoldTextView
                    android:id="@+id/logo_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:text="@string/tracktor"
                    android:textColor="@color/white"
                    android:textSize="50sp" />
                <!--android:src="@drawable/ic_logo" />-->
            </LinearLayout>


            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/login_fb_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/facebook_login_bg"
                    android:orientation="horizontal"
                    android:text="@string/facebook_login"
                    android:textAlignment="center"
                    android:textColor="@color/white">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_facebook" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="@color/white" />

                    <com.roxwin.tracktor.widgets.textviews.RoxwinRegularTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="17dp"
                        android:text="@string/login_with_facebook"
                        android:textColor="@color/white" />
                </LinearLayout>

                <!--<com.facebook.login.widget.LoginButton-->
                <!--android:id="@+id/login_button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginTop="30dp"-->
                <!--android:layout_marginBottom="30dp" />-->

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_black_overlay_30_percent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_user" />

                    <com.roxwin.tracktor.widgets.edittexts.RoxwinRegularEditText
                        android:id="@+id/email_login_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:imeActionLabel="@string/next"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:nextFocusDown="@+id/password_login_edt"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/transparent" />

                <LinearLayout
                    android:id="@+id/password_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_black_overlay_30_percent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_password" />

                    <com.roxwin.tracktor.widgets.edittexts.RoxwinRegularEditText
                        android:id="@+id/password_login_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:imeActionLabel="@string/done"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/login_button_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.roxwin.tracktor.widgets.textviews.RoxwinRegularTextView
                        android:id="@+id/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/facebook_login_bg"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/login"
                        android:textColor="@color/green_btn"
                        android:textSize="@dimen/normal_text_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <com.roxwin.tracktor.widgets.textviews.RoxwinRegularTextView
                            android:id="@+id/forgot_password_btn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/facebook_login_bg"
                            android:gravity="center"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:text="@string/forgot_password_hint"
                            android:textColor="@color/white"
                            android:textSize="@dimen/normal_text_size" />

                        <com.roxwin.tracktor.widgets.textviews.RoxwinRegularTextView
                            android:id="@+id/register_btn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/facebook_login_bg"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/register"
                            android:textColor="@color/white"
                            android:textSize="@dimen/normal_text_size" />
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
